--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="color_ffffff_12">#1FFFFFFF</color>
     <color name="color_272239">#272239</color>
     <color name="color_fdf3d6">#FDF3D6</color>
+    <color name="dummy">#992D7E</color>
 </resources>
