--- a/app/src/main/res/layout/onboard_item_layout.xml
+++ b/app/src/main/res/layout/onboard_item_layout.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingVertical="6dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/collapsedLayout"
@@ -12,7 +13,6 @@
         app:layout_constraintTop_toTopOf="parent"
         android:background="@drawable/rect_rounded_radius_28dp_28085c52"
         android:padding="16dp"
-        android:layout_marginTop="12dp"
         android:visibility="gone">
 
         <androidx.appcompat.widget.AppCompatImageView
@@ -58,10 +58,10 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/expendedLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/collapsedLayout"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="@+id/collapsedLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:background="@drawable/rect_rounded_radius_28dp_28085c52"
-        android:layout_marginTop="12dp"
         android:padding="16dp"
         android:visibility="visible">
 
